[package]
name = "pla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
comfy-table = "7.1.0"
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

[profile.release]
opt-level = 3
strip = true
lto = true
