[package]
name = "bump"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
clap_complete = "4.5.32"
config = { version = "0.14.0", features = ["toml"] }
env_logger = "0.11.5"
inquire = "0.7.5"
log = "0.4.22"
owo-colors = "4.1.0"
semver = "1.0.23"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
toml_edit = { version = "0.22.24", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
