[package]
name = "mm2glab"
version = "0.1.1-beta.5"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
tempfile = "3.10"
regex = "1.10"
dialoguer = "0.11"
async-trait = "0.1"
# ollama-rs = { version = "0.2", features = ["tokio"] }
# need ollama-rs to impl error with sync and send to use in async code
ollama-rs = { git = "https://github.com/pepperoni21/ollama-rs.git", rev = "4d519d8055d6b2b1d1311a04f2e400b16b29a64a" }
edit = "0.1"
futures = "0.3.31"
indicatif = "0.17.11"
termimad = "0.31.2"
