[package]
name = "wum"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive", "env"] }
console = "0.16.2"
env_logger = "0.11.9"
indicatif = "0.18.4"
log = "0.4.29"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
owo-colors = "4.3.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
